fixing styling and spacing with resume card

--- a/src/components/Resume/resume.css
+++ b/src/components/Resume/resume.css
@@ -13,7 +13,6 @@
 .resume {
     display: flex;
     height: 50vh;
-    align-items: center;
 }
 
 .resume-left {
@@ -30,11 +29,18 @@
 }
 
 .resume-card {
-    width: 60%;
+    width: 75%;
     height: 100vh;
     border-radius: 30px;
     position: relative;
     overflow: hidden;
+    /* border: var(--charcoal) solid 1px; */
+    margin-bottom: 1px;
+}
+
+.resume-image {
+    width: 100%;
+    
 }
 
 .resume-frame {
